@@ -4,15 +4,17 @@ Hash: SHA256
 DIST riddle-1.1.0.gem 36864 RMD160 8ec552684204ab938bfa41779d3dc39b5aa8ece4 SHA1 d2ff1e7eb2ed963faad88de0ebe9ef4c80c19e86 SHA256 655b88ec7403ee5bc7aa7661d32bcef9409acdb83ed248c120cd820053fcfdb8
 DIST riddle-1.2.2.gem 37376 RMD160 d034c420fcaa601656d78697bdb5abf8acbc4ab2 SHA1 c09c2bb0374f00665e528a0a8d8533fb1c1c6cd8 SHA256 c1e593d35e7a9b90e72f580b9dfcd62a0db2198f28a50cd6a675a12926e94e23
 DIST riddle-1.3.2.gem 38400 RMD160 e720a31dd256e8e86a215affbbde82dc43151923 SHA1 ab0ef4086cc4c10ae3a0030e71813ec5f7a39770 SHA256 693ad214e62746d0f02f27e4f37a1741f109829fafeb9e2dc025dee06d0289c7
+DIST riddle-1.3.3.gem 41472 RMD160 9a628c4588f85274890f1c4df333eb95a62e1266 SHA1 04a9d21c9c09e4428cdbb070668f1f77eac31104 SHA256 169f29566a4f32df36d90620cadfc6bec10c6b0961641356d8c9f609e7550f65
 EBUILD riddle-1.1.0.ebuild 657 RMD160 842f222f7bd87d89303b68e98ee19a23093cec70 SHA1 d0ecfd552e8e0a940d71924e4700e8deeaef93c8 SHA256 dcd1c54e6e92743ff90923147b4200fcf193707201366c17f5da7828154c8d91
 EBUILD riddle-1.2.2.ebuild 657 RMD160 e36e5b521918c715a5396917ff511c77792ae555 SHA1 4271d907db0730bcdc2ac443d8e95daa69f06df4 SHA256 f9c5c02b5cc5365a249bac44f8a5751307110aac9941af2bc8a79055ea04c2dc
 EBUILD riddle-1.3.2.ebuild 659 RMD160 9cb465572f582899bb303e681125607baec9ea67 SHA1 6afd7578c0789924510eb950d7079b3703830806 SHA256 88e97fb87a7aee76b3908354bb0fea097066a814846d63e3064a94d3224f08bc
-MISC ChangeLog 1544 RMD160 02aabd4ac07dc979fbd4f455a6f27e86b8ee969b SHA1 faeef4a99e18227723eb003a11c14f67e893f096 SHA256 b0a7483d4ad3ae7972a96552a9b112d23ae28ad8c9e73c58673e2028a5c3e76a
+EBUILD riddle-1.3.3.ebuild 659 RMD160 9cb465572f582899bb303e681125607baec9ea67 SHA1 6afd7578c0789924510eb950d7079b3703830806 SHA256 88e97fb87a7aee76b3908354bb0fea097066a814846d63e3064a94d3224f08bc
+MISC ChangeLog 1690 RMD160 ce1cc4ccf02fefa178753a8a818752a4b5a013b9 SHA1 21d6f3d56f3ff31c8ef9e3311b351b132ab615ea SHA256 c8b50991d3d29a157bf206bc435e9924d1e8cec7eba9edfe45d837538e73926d
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk4LMkMACgkQiIP6VqMIqNeZ7wD/Q+JwK3/cDMyMKAcsWbbTiipq
-OhJUO6sUc8ZJAoHBU4oA/1fzAITSraQyIctfUm6NOAMrD+5l1iuAIs2bdvG+trP3
-=lZ6E
+iF4EAREIAAYFAk4NwXsACgkQiIP6VqMIqNf9iwD9EdPLTwe5TYOCwPYYKnvGvxbZ
+ZdJCg2I/oPm//JUeMBwBAJeEOOAiDEJjt/R5Ol9y49VIfbkfSX1HZs/p9wmuPuhm
+=BS1y
 -----END PGP SIGNATURE-----
