@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*riddle-1.3.3 (01 Jul 2011)
+
+  01 Jul 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.3.3.ebuild:
+  Version bump with support for sphinx 2.x.
+
   29 Jun 2011; Hans de Graaff <graaff@gentoo.org> riddle-1.3.2.ebuild:
   Move for us incompatible version into a slot.
 
